@@ -1,3 +1,8 @@
+2013-12-14  Jay Berkenbilt  <ejb@ql.org>
+
+	* Allow anyspace rather than just newline to follow xref header.
+	This allows qpdf to read a wider range of damaged files.
+
 2013-11-29  Jay Berkenbilt  <ejb@ql.org>
 
 	* If NO_GET_ENVIRONMENT is #defined, for Windows only,
